--- a/Views/LoginPageView.axaml
+++ b/Views/LoginPageView.axaml
@@ -62,10 +62,19 @@
 
 						<TextBlock Text="{Binding ErrorMessage}"
 								   HorizontalAlignment="Center" Foreground="IndianRed" FontSize="14"/>
-						<Button Content="LOGIN" Name="BtnLogin" Background="#FFCA40" 
+						<Button Content="LOGIN" Name="BtnLogin" Background="#FFCA40"  FontFamily="Montserrat" FontWeight="Bold"
 								HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center" 
-								Margin="0 -10 0 0" Height="40" FontSize="14"
+								Margin="0 -10 0 20" Height="40" FontSize="14"
 								Command="{Binding LoginCommand}"/>
+
+						<TextBlock Text="or" 
+								   HorizontalAlignment="Center" 
+								   FontFamily="Montserrat" FontWeight="Medium"/>
+						<Button Content="Guest Mode" Name="BtnGuestMode"
+								FontFamily="Montserrat" FontWeight="Bold"
+								HorizontalAlignment="Center" BorderBrush="Transparent"
+								Background="White" Command="{Binding AdminTrueCommand}"
+								Foreground="BlueViolet"/>
 					</StackPanel>
 				</DockPanel>
 			</Border>
