--- a/Views/ProductsContentView.axaml
+++ b/Views/ProductsContentView.axaml
@@ -54,7 +54,9 @@
 								   FontSize="40"
 								   FontFamily="Montserrat"
 								   FontWeight="Bold" Text="All Products"/>
-						<Image Source="C:\Users\Jelo\source\repos\Mamilots POS\Assets\Images\taroIcon.png"
+						<Image Source="
+							   
+							   \Assets\Images\taroIcon.png"
 							   Width="55" Margin="0, -10, 0, 0"/>
 					</StackPanel>
 				</StackPanel>
