--- a/Views/HistoryPageView.axaml
+++ b/Views/HistoryPageView.axaml
@@ -21,13 +21,13 @@
 		</LinearGradientBrush>
 	</UserControl.Resources>
 
-	<Border Background="LightGray" CornerRadius="10">
+	<Border Background="{StaticResource MyGradientBrush}" CornerRadius="10">
 		<Grid>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*"/>
 				<ColumnDefinition Width="0.5*"/>
 			</Grid.ColumnDefinitions>
-			<Border Grid.Row="0" Background="{StaticResource MyGradientBrush}">
+			<Border Grid.Column="0" Background="{StaticResource MyGradientBrush}" CornerRadius="8 0 0 8">
 				<StackPanel>
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="40" Margin="0, 16, 0, 0">
 						<TextBox Width="250"
@@ -49,21 +49,21 @@
 					</StackPanel>
 
 					<ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0, 20, 0, 0">
-						<ItemsControl FontFamily="Montserrat" ItemsSource="{Binding transactions}" HorizontalAlignment="Center">
+						<ItemsControl FontFamily="Montserrat" ItemsSource="{Binding transactions}" Margin="100 0">
 							<ItemsControl.ItemTemplate>
 								<DataTemplate>
-									<Border BoxShadow="0 0 70 -25 DarkGray" Margin="0, 10">
+									<Border BoxShadow="0 0 60 -25 DarkGray" Margin="0, 15">
 										<!-- Reduced the margin here -->
-										<Button CornerRadius="20" Cursor="Hand" MinWidth="350" Height="70">
+										<Button CornerRadius="20" Cursor="Hand" Height="80" HorizontalAlignment="Stretch">
 											<DockPanel>
-												<TextBlock DockPanel.Dock="Left" FontSize="24" FontWeight="Bold" Margin="0 0 50 0">
+												<TextBlock DockPanel.Dock="Left" FontSize="24" FontWeight="Bold" Margin="0 0 100 0">
 													<TextBlock.Text>
 														<MultiBinding StringFormat="Order {0}">
 															<Binding Path="OrderNumber" />
 														</MultiBinding>
 													</TextBlock.Text>
 												</TextBlock>
-												<TextBlock DockPanel.Dock="Right" FontSize="24" FontWeight="Bold" Foreground="DarkGray" Margin="20 0 0 0">
+												<TextBlock DockPanel.Dock="Right" FontSize="24" FontWeight="Bold" Foreground="DarkGray" Margin="500 0 0 0">
 													<TextBlock.Text>
 														<Binding Path="TotalPrice" Converter="{StaticResource DoubleToCurrencyConverter}"/>
 													</TextBlock.Text>
@@ -82,6 +82,10 @@
 						</ItemsControl>
 					</ScrollViewer>
 				</StackPanel>
+			</Border>
+
+			<Border Grid.Column="1" Background="LightGray" CornerRadius="90 8 8 90">
+				
 			</Border>
 		</Grid>
 	</Border>
