--- a/Views/ProductsEditPageView.axaml
+++ b/Views/ProductsEditPageView.axaml
@@ -2,9 +2,240 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="clr-namespace:Mamilots_POS.ViewModels"
              xmlns:converters="clr-namespace:Mamilots_POS.Converters"
-             mc:Ignorable="d"
+             xmlns:vm="clr-namespace:Mamilots_POS.ViewModels"
+             xmlns:views="clr-namespace:Mamilots_POS.Views"
+             mc:Ignorable="d" d:DesignWidth="1920" d:DesignHeight="1024"
              x:Class="Mamilots_POS.Views.ProductsEditPageView"
              x:DataType="vm:ProductsEditPageViewModel">
+	<Design.DataContext>
+		<vm:ProductsEditPageViewModel/>
+	</Design.DataContext>
+
+	<UserControl.Resources>
+		<converters:CountToRowsConverter x:Key="CountToRowsConverter"/>
+		<converters:CategoryIdToNameConverter x:Key="CategoryIdToNameConverter"/>
+		<LinearGradientBrush x:Key="MyGradientBrush" StartPoint="0%,0%" EndPoint="0%,100%">
+			<GradientStop Offset="0" Color="#F8F8F7"/>
+			<GradientStop Offset="0.5" Color="#FFFFE4"/>
+			<GradientStop Offset="1" Color="#F8F8F7"/>
+		</LinearGradientBrush>
+	</UserControl.Resources>
+
+
+	<UserControl.Styles>
+		<Style Selector="DataGridCell">
+			<Setter Property="FontFamily" Value="Montserrat"/>
+			<Setter Property="FontSize" Value="16"/>
+			<Setter Property="FontWeight" Value="Medium"/>
+		</Style>
+		<Style Selector="DataGridColumnHeader">
+			<Setter Property="FontFamily" Value="Montserrat"/>
+			<Setter Property="FontSize" Value="18"/>
+			<Setter Property="FontWeight" Value="Bold"/>
+			<Setter Property="Foreground" Value="Black"/>
+		</Style>
+		<Style Selector="Button">
+			<Setter Property="Cursor" Value="Hand"/>
+			<Style Selector="^#BtnEdit:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Background" Value="Goldenrod"/>
+			</Style>
+			<Style Selector="^#BtnDelete:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Background" Value="#E8083E"/>
+			</Style>
+			<Style Selector="^#BtnAdd:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Background" Value="Green"/>
+			</Style>
+			<Style Selector="^#BtnExit:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Foreground" Value="#E8083E"/>
+				<Setter Property="Background" Value="Transparent"/>
+				<Setter Property="BorderBrush" Value="Transparent"/>
+			</Style>
+			<Style Selector="^#BtnSave:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Background" Value="Green"/>
+			</Style>
+			<Style Selector="^#BtnEditExit:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Foreground" Value="#E8083E"/>
+				<Setter Property="Background" Value="Transparent"/>
+				<Setter Property="BorderBrush" Value="Transparent"/>
+			</Style>
+			<Style Selector="^#BtnEditSave:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Background" Value="Green"/>
+			</Style>
+			<Style Selector="^#BtnDeleteExit:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Foreground" Value="#E8083E"/>
+				<Setter Property="Background" Value="Transparent"/>
+				<Setter Property="BorderBrush" Value="Transparent"/>
+			</Style>
+			<Style Selector="^#BtnDeleteConfirm:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+				<Setter Property="Background" Value="#E8083E"/>
+			</Style>
+		</Style>
+		<Style Selector="TextBlock">
+			<Setter Property="FontFamily" Value="Montserrat"/>
+		</Style>
+		<Style Selector="TextBox">
+			<Setter Property="Background" Value="LightGray"/>
+		</Style>
+	</UserControl.Styles>
+
+	<Grid Background="{StaticResource MyGradientBrush}"> 
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+
+		
+		<StackPanel Orientation="Horizontal" Margin="0 88 0 50">
+			<TextBlock Margin="60, 25, 10, 33"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Top"
+                       FontSize="40"
+                       FontFamily="Montserrat"
+                       FontWeight="Bold" Text="Product Manager"/>
+			<Image Source="\Assets\Images\taroIcon.png"
+                   Width="55" Margin="0, -10, 0, 0"/>
+		</StackPanel>
+		<StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="40" Margin="0, 16, 0, 0">
+			<Button Name="BtnAdd" Content="+" HorizontalAlignment="Right" Width="45" Height="45" CornerRadius="5"
+                    Margin="0 150 30 0" Background="LimeGreen" BorderThickness="2"
+                    FontSize="28" FontFamily="Montserrat"
+                    Command="{Binding ShowAddModalCommand}"/>
+		</StackPanel>
+		<StackPanel Grid.Row="1">
+			<DataGrid Name="ProductTable" Margin="30 0 30 30" ItemsSource="{Binding Products}"
+                      IsReadOnly="True" GridLinesVisibility="Horizontal" BorderThickness="2"
+                      BorderBrush="Gray" CanUserReorderColumns="False"
+                      CanUserResizeColumns="True" CanUserSortColumns="True">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Product Name" Binding="{Binding Name}" Width="*"/>
+					<DataGridTextColumn Header="Category" Binding="{Binding CategoryId, Converter={StaticResource CategoryIdToNameConverter}}" Width="*"/>
+					<DataGridTextColumn Header="Best Seller?" Binding="{Binding IsBestSeller}" Width="*"/>
+					<DataGridTemplateColumn Header="Price" Width="*">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding Price, StringFormat='₱ {0:F2}'}"/>
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+					<DataGridTemplateColumn Header="Actions" Width="*">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<StackPanel Orientation="Horizontal" Margin="5" Spacing="2">
+									<Button Name="BtnEdit" Content="Edit" Command="{Binding #ProductTable.((vm:ProductsEditPageViewModel)DataContext).ShowEditModalCommand}"
+                                            Background="#FFCA40">
+										<PathIcon Data="M27.3138 4.68622C28.8759 6.24832 28.8759 8.78098 27.3138 10.3431L12.5409 25.116C11.9001 25.7568 11.0972 26.2114 10.218 26.4312L5.63602 27.5767C4.90364 27.7598 4.24025 27.0964 4.42335 26.364L5.56885 21.782C5.78864 20.9028 6.24323 20.0999 6.88402 19.4591L21.6569 4.68622C23.219 3.12412 25.7517 3.12412 27.3138 4.68622ZM20.2426 8.92865L8.29824 20.8734C7.91376 21.2578 7.641 21.7396 7.50913 22.2671L6.76786 25.2322L9.73295 24.4909C10.2604 24.359 10.7422 24.0863 11.1267 23.7018L23.0706 11.7566L20.2426 8.92865ZM23.0712 6.10043L21.6566 7.51465L24.4846 10.3426L25.8996 8.92886C26.6806 8.14781 26.6806 6.88148 25.8996 6.10043C25.1185 5.31939 23.8522 5.31939 23.0712 6.10043Z"/>
+									</Button>
+									<Button Name="BtnDelete" Content="Delete" Command="{Binding #ProductTable.((vm:ProductsEditPageViewModel)DataContext).ShowDeleteModalCommand}"
+                                            Background="Red">
+										<PathIcon Data="M24,7.25 C27.1017853,7.25 29.629937,9.70601719 29.7458479,12.7794443 L29.75,13 L37,13 C37.6903559,13 38.25,13.5596441 38.25,14.25 C38.25,14.8972087 37.7581253,15.4295339 37.1278052,15.4935464 L37,15.5 L35.909,15.5 L34.2058308,38.0698451 C34.0385226,40.2866784 32.1910211,42 29.9678833,42 L18.0321167,42 C15.8089789,42 13.9614774,40.2866784 13.7941692,38.0698451 L12.09,15.5 L11,15.5 C10.3527913,15.5 9.8204661,15.0081253 9.75645361,14.3778052 L9.75,14.25 C9.75,13.6027913 10.2418747,13.0704661 10.8721948,13.0064536 L11,13 L18.25,13 C18.25,9.82436269 20.8243627,7.25 24,7.25 Z M33.4021054,15.5 L14.5978946,15.5 L16.2870795,37.8817009 C16.3559711,38.7945146 17.116707,39.5 18.0321167,39.5 L29.9678833,39.5 C30.883293,39.5 31.6440289,38.7945146 31.7129205,37.8817009 L33.4021054,15.5 Z M27.25,20.75 C27.8972087,20.75 28.4295339,21.2418747 28.4935464,21.8721948 L28.5,22 L28.5,33 C28.5,33.6903559 27.9403559,34.25 27.25,34.25 C26.6027913,34.25 26.0704661,33.7581253 26.0064536,33.1278052 L26,33 L26,22 C26,21.3096441 26.5596441,20.75 27.25,20.75 Z M20.75,20.75 C21.3972087,20.75 21.9295339,21.2418747 21.9935464,21.8721948 L22,22 L22,33 C22,33.6903559 21.4403559,34.25 20.75,34.25 C20.1027913,34.25 19.5704661,33.7581253 19.5064536,33.1278052 L19.5,33 L19.5,22 C19.5,21.3096441 20.0596441,20.75 20.75,20.75 Z M24,9.75 C22.2669685,9.75 20.8507541,11.1064548 20.7551448,12.8155761 L20.75,13 L27.25,13 C27.25,11.2050746 25.7949254,9.75 24,9.75 Z"/>
+									</Button>
+								</StackPanel>
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+				</DataGrid.Columns>
+			</DataGrid>
+		</StackPanel>
+
+		<!-- Modal for adding new product -->
+
+		<Border Background="Gray" Opacity="0.5" IsVisible="{Binding IsAddModalVisible}" Grid.RowSpan="2" ZIndex="1"/>
+		<Border Background="White" IsVisible="{Binding IsAddModalVisible}" Width="493" Height="" HorizontalAlignment="Right"
+				VerticalAlignment="Stretch" Grid.RowSpan="2" ZIndex="2" CornerRadius="90 0 0 90" Padding="50">
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+				<StackPanel Grid.Column="0">
+					<Button Name="BtnExit" Content="X" BorderBrush="Transparent" Command="{Binding HideAddModalCommand}"
+							FontFamily="Montserrat" FontWeight="Bold" FontSize="20" Margin="0 100 0 0"
+							HorizontalAlignment="Right"/>
+				</StackPanel>
+
+				<StackPanel Grid.Column="1">
+					<TextBlock Text="Add Product" FontWeight="Bold" FontSize="24" Margin="0,105,0,20"/>
+					<TextBox Watermark="Product Name" Margin="0,0,0,15"/>
+					<ComboBox PlaceholderText="Category" Margin="0,0,0,15" HorizontalAlignment="Stretch">
+						<ComboBoxItem Content="Taro Chips"/>
+						<ComboBoxItem Content="Banana Chips"/>
+						<ComboBoxItem Content="Camote Chips"/>
+						<ComboBoxItem Content="Other Products"/>
+					</ComboBox>
+					<TextBox Watermark="Price" Margin="0,0,0,15"/>
+					<CheckBox Content="Best Seller" Margin="0,0,0,15"/>
+					<Button Name="BtnSave" Content="Save" Margin="0,20,0,0" Width="180" FontFamily="Montserrat"
+							Background="LimeGreen" HorizontalAlignment="Center"/>
+				</StackPanel>
+			</Grid>
+		</Border>
+
+
+		<!-- Modal for edit new product -->
+
+		<Border Background="Gray" Opacity="0.5" IsVisible="{Binding IsEditModalVisible}" Grid.RowSpan="2" ZIndex="1"/>
+		<Border Background="White" IsVisible="{Binding IsEditModalVisible}" Width="493" Height="" HorizontalAlignment="Right"
+				VerticalAlignment="Stretch" Grid.RowSpan="2" ZIndex="2" CornerRadius="90 0 0 90" Padding="50">
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+				<StackPanel Grid.Column="0">
+					<Button Name="BtnEditExit" Content="X" BorderBrush="Transparent" Command="{Binding HideEditModalCommand}"
+							FontFamily="Montserrat" FontWeight="Bold" FontSize="20" Margin="0 100 0 0"
+							HorizontalAlignment="Right"/>
+				</StackPanel>
+
+				<StackPanel Grid.Column="1">
+					<TextBlock Text="Edit Product" FontWeight="Bold" FontSize="24" Margin="0,105,0,20"/>
+					<TextBox Watermark="Product Name" Margin="0,0,0,15"/>
+					<ComboBox PlaceholderText="Category" Margin="0,0,0,15" HorizontalAlignment="Stretch">
+						<ComboBoxItem Content="Taro Chips"/>
+						<ComboBoxItem Content="Banana Chips"/>
+						<ComboBoxItem Content="Camote Chips"/>
+						<ComboBoxItem Content="Other Products"/>
+					</ComboBox>
+					<TextBox Watermark="Price" Margin="0,0,0,15"/>
+					<CheckBox Content="Best Seller" Margin="0,0,0,15" />
+					<Button Name="BtnEditSave" Content="Save" 
+							Margin="0,20,0,0" Width="180" FontFamily="Montserrat"
+							Background="LimeGreen" HorizontalAlignment="Center"/>
+				</StackPanel>
+			</Grid>
+		</Border>
+
+		<!-- Modal for delete new product -->
+
+		<Border Background="Gray" Opacity="0.5" IsVisible="{Binding IsDeleteModalVisible}" Grid.RowSpan="2" ZIndex="1"/>
+		<Border Background="White" IsVisible="{Binding IsDeleteModalVisible}" Width="493" Height="" HorizontalAlignment="Center"
+				VerticalAlignment="Center" Grid.RowSpan="2" ZIndex="2" CornerRadius="10" Padding="10">
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+				<StackPanel Grid.Column="0">
+					<Button Name="BtnDeleteExit" Content="X" BorderBrush="Transparent" Command="{Binding HideDeleteModal}"
+							FontFamily="Montserrat" FontWeight="Bold" FontSize="20" Margin="0 5 0 0"
+							HorizontalAlignment="Right"/>
+				</StackPanel>
+
+				<StackPanel Grid.Column="1" Spacing="50">
+					<TextBlock Text="Delete Confirmation" FontWeight="Bold" FontSize="24" Margin="20,10,0,0"/>
+					<TextBlock Text="Do you really want to delete product?" Margin="20,0,0,0" FontSize="18"/> 
+
+					<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 15 10 10">
+						<Button Content="Cancel" Margin="15 0" Command="{Binding HideDeleteModalCommand}"
+								Background="White" Width="100"/>
+						<Button Name="BtnDeleteConfirm" Content="Delete"
+							Width="100" FontFamily="Montserrat"
+							Background="Red"/>
+					</StackPanel>
+					
+				</StackPanel>
+			</Grid>
+		</Border>
+	</Grid>
 </UserControl>
