--- a/Views/ProductsPageView.axaml
+++ b/Views/ProductsPageView.axaml
@@ -23,7 +23,8 @@
 
 	<UserControl.Styles>
 		<Style Selector="Button#BtnAction:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-			<Setter Property="Background" Value="White"/>
+			<Setter Property="Background" Value="Goldenrod"/>
+			<Setter Property="Foreground" Value="LightGray"/>
 		</Style>
 	</UserControl.Styles>
 
@@ -105,22 +106,5 @@
 				</ScrollViewer>
 			</Grid>
 		</Border>
-
-		<!-- Floating Action Button (FAB) -->
-		<Canvas VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,100,100">
-			<Border BoxShadow="0 0 90 -15 DarkGray" CornerRadius="50">
-				<Button Name="BtnAction" Width="80" Height="80" 
-					CornerRadius="50" Background="#FFCA40" 
-					Foreground="White" 
-					Content="+">
-				<Button.Styles>
-					<Style Selector="Button">
-						<Setter Property="FontSize" Value="40"/>
-						<Setter Property="FontWeight" Value="Bold"/>
-					</Style>
-				</Button.Styles>
-				</Button>
-			</Border>
-		</Canvas>
 	</Grid>
 </UserControl>
