--- a/Views/ProductsEditPageView.axaml
+++ b/Views/ProductsEditPageView.axaml
@@ -110,7 +110,7 @@
 				<DataGrid.Columns>
 					<DataGridTextColumn Header="Product Name" Binding="{Binding Name}" Width="*"/>
 					<DataGridTextColumn Header="Category" Binding="{Binding CategoryId, Converter={StaticResource CategoryIdToNameConverter}}" Width="*"/>
-					<DataGridTextColumn Header="Best Seller?" Binding="{Binding IsBestSeller}" Width="*"/>
+					<DataGridCheckBoxColumn Header="Best Seller?" Binding="{Binding IsBestSeller}" Width="*"/>
 					<DataGridTemplateColumn Header="Price" Width="*">
 						<DataGridTemplateColumn.CellTemplate>
 							<DataTemplate>
@@ -231,7 +231,7 @@
 					<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 15 10 10">
 						<Button Content="Cancel" Margin="15 0" Command="{Binding HideDeleteModalCommand}"
 								Background="White" Width="100"/>
-						<Button Name="BtnDeleteConfirm" Content="Delete"
+						<Button CommandParameter="{Binding CurrProduct.Id}" Command="{Binding DeleteCommand}" Name="BtnDeleteConfirm" Content="Delete"
 							Width="100" FontFamily="Montserrat"
 							Background="Red"/>
 					</StackPanel>
